// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary phrase correctly with multiple expenses 1`] = `
<div>
  <p>
    Viewing 2 expenses totalling $94.34
  </p>
</div>
`;

exports[`should render summary phrase correctly with one expense 1`] = `
<div>
  <p>
    Viewing 1 expense totalling $94.34
  </p>
</div>
`;
